<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        style="@style/text"
        android:text="@string/SingIn"/>

    <EditText
        android:id="@+id/cpf_edit"
        style="@style/editTextStyle"
        android:layout_marginTop="150dp"
        android:autofillHints=""
        android:hint="@string/cpf_Text"
        android:inputType="number"
        android:maxLength="14" />

    <EditText
        android:id="@+id/nome_edit"
        style="@style/editTextStyle"
        android:layout_below="@+id/cpf_edit"
        android:autofillHints=""
        android:hint="@string/nome_Text"
        android:inputType="textPersonName"
        android:maxLength="25" />

    <EditText
        android:id="@+id/desejo_edit"
        style="@style/editTextStyle"
        android:layout_below="@+id/nome_edit"
        android:autofillHints=""
        android:hint="@string/desejo_Text"
        android:inputType="textPersonName"
        android:maxLength="35" />

    <EditText
        android:id="@+id/gameId"
        style="@style/editTextStyle"
        android:layout_below="@+id/desejo_edit"
        android:autofillHints=""
        android:hint="@string/sessionid_text"
        android:maxLength="11"
        android:inputType="textCapCharacters" />

    <TextView
        android:id="@+id/status"
        style="@style/text"
        android:layout_below="@+id/gameId"
        android:text=""
        android:textAlignment="center" />

    <Button
        android:id="@+id/cadastrar"
        style="@style/ButtonStyle"
        android:layout_below="@+id/status"
        android:layout_marginTop="20dp"
        android:text="@string/cadastrar_text" />

    <Button
        android:id="@+id/verificar"
        style="@style/ButtonStyle"
        android:layout_below="@+id/cadastrar"
        android:text="@string/verificar_Text" />

</RelativeLayout>