<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout"
    android:orientation="vertical"
    tools:context=".Home">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/ajuda"
        android:textAlignment="center"
        style="@style/text"
        android:layout_marginTop="60dp"
        />
    <TextView
        android:id="@+id/conteudo"
        style="@style/status"
        android:text="@string/falhanaconexao"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/sobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/conteudo"
        android:text="@string/sobre"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        />

</RelativeLayout>